--- a/juego/index.html
+++ b/juego/index.html
@@ -39,7 +39,7 @@
 				<a class="nav-link" href="../contacto/index.html">Contacto</a>
 			  </li>
 			   <li class="nav-item">
-				<a class="nav-link" href="juego.html">Juego</a>
+				<a class="nav-link" href="../juego/index.html">Juego</a>
 			  </li> 
 			  <li class="nav-item">
 				<a class="nav-link" href="../desarrollador/index.html">Desarrollador</a>
